checking every cell on a sheet is expensive, related fdo#71934

This is only the first of two places that does this.

Change-Id: I57fe1eb07630ecd86b112e88b7ad32c16e9f793a